src/test/deca/syntax/parser/invalid/field_definition_visibility_reserved_word.deca
// Parser test, visibility replaced by "true"

class myClass {
    true int x = 12;
}